--- a/docker/docker-compose-my-sql.yml
+++ b/docker/docker-compose-my-sql.yml
@@ -2,7 +2,7 @@ version: '3.3'
 
 services:
   mysql-db:
-    image: mysql
+    image: mysql:8.0
     command: --default-authentication-plugin=mysql_native_password
     ports:
       - "3306:3306"
